--- a/tests/_support/project/templates/form.html.twig
+++ b/tests/_support/project/templates/form.html.twig
@@ -1,6 +1,12 @@
-<form action="" method="post" enctype="multipart/form-data">
-    <input type="file" name="single_file" />
-    <input type="file" name="multiple_files[]" />
-    <input type="file" name="multiple_files[]" />
+<form action="{{ path('index') }}" method="post" enctype="multipart/form-data">
+    <div>
+        <label>Single file</label>
+        <input type="file" name="single_file" />
+    </div>
+    <div>
+        <label>Multiple files</label>
+        <input type="file" name="multiple_files[]" />
+        <input type="file" name="multiple_files[]" />
+    </div>
     <button>Submit</button>
 </form>
