Added Symfony form type and file transformer

--- a/tests/_support/project/templates/index.html.twig
+++ b/tests/_support/project/templates/index.html.twig
@@ -1,1 +1,2 @@
 <a href="{{ path('native_files') }}">Native file upload test</a>
+<a href="{{ path('symfony_files') }}">Symfony file upload test</a>
