Register configuration for entities as services

--- a/tests/_support/project/templates/symfonyForm.html.twig
+++ b/tests/_support/project/templates/symfonyForm.html.twig
@@ -9,3 +9,11 @@
     {{ form_rest(form) }}
     <button>Submit</button>
 {{ form_end(form) }}
+<p>FSi\Tests\App\Entity\FileEntity configuration:</p>
+<br/>
+{% for field in configuration %}
+    {% for key, value in field %}
+        <p>{{ key }}: {{ value }}</p>
+    {% endfor %}
+    {% if not loop.last %}<br/>{% endif %}
+{% endfor %}
