--- a/tests/_support/project/templates/symfonyForm.html.twig
+++ b/tests/_support/project/templates/symfonyForm.html.twig
@@ -1,6 +1,9 @@
 <p>
     <a href="{{ path('index') }}">Index</a>
 </p>
+{% if message is not null %}
+    <p>{{ message|nl2br|raw }}</p>
+{% endif %}
 {% form_theme form '@Files/formTheme.html.twig' %}
 {{ form_start(form) }}
     {{ form_rest(form) }}
