Added image constraint and an option to display uploaded image in web file

--- a/src/Integration/Symfony/Resources/views/formTheme.html.twig
+++ b/src/Integration/Symfony/Resources/views/formTheme.html.twig
@@ -21,7 +21,11 @@
             {%- endif -%}
         </label>
         {% if url is not empty and basename is not empty %}
-            <a href="{{ url }}" target="_blank">{{ basename }}</a>
+            {% if image %}
+                <img src="{{ url }}" alt="{{ basename }}" width="200" />
+            {% else %}
+                <a href="{{ url }}" target="_blank">{{ basename }}</a>
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
