Removed default translation domain from WebFileType, resolve file basename through FileManager

--- a/src/Integration/Symfony/Resources/views/formTheme.html.twig
+++ b/src/Integration/Symfony/Resources/views/formTheme.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain 'FSiFiles' %}
+
 {% block web_file_label -%}
     {% if not removable %}{{ block('form_label') }}{% endif %}
 {%- endblock %}
