Initial multiple file upload support

--- a/tests/_support/project/templates/index.html.twig
+++ b/tests/_support/project/templates/index.html.twig
@@ -1,2 +1,3 @@
 <a href="{{ path('native_files') }}">Native file upload test</a>
 <a href="{{ path('symfony_files') }}">Symfony file upload test</a>
+<a href="{{ path('multiple_symfony_files') }}">Symfony multiple file upload test</a>
